--- a/styles/style.css
+++ b/styles/style.css
@@ -25,19 +25,19 @@ h1{
 }
 .link-container {
     text-align: center;
+    margin-top: 100px;
 }
 .recipe {
     width: 400px;
     height: 300px;
     background-size: 400px 300px;
     display: inline-block;
-    margin: 15px;
-    margin-top: 100px;
-    background-image: inherit;
     text-decoration: none;
     padding: 120px;
     text-align: center;
+    margin: 15px;
     border: 5px ridge ghostwhite;
+    background-color: ghostwhite;
 }
 
 .one {
@@ -50,4 +50,9 @@ h1{
 
 .three {
     background-image: url("https://source.roboflow.com/am3qw3RzG3XESvD4hwIKqwpvMTn2/6FWw2DCwdN1bEsa6B32P/original.jpg");
+}
+
+
+.recipe:hover{
+  opacity: 0.5;
 }
