--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
 
 h1{
     font-family: papyrus, Arial, Helvetica, sans-serif;
+    text-align: center;
 }
 
 .main-header {
@@ -15,7 +16,7 @@ h1{
     width: 300px;
     height: 65px;
     margin: auto;
-    text-align: center;
+    margin-bottom: 100px;
 }
 
 .home-link {
@@ -23,35 +24,23 @@ h1{
     text-decoration: none;
     color: inherit;
 }
-.link-container {
+.img-container{
     text-align: center;
-    margin-top: 100px;
 }
-.recipe {
-    width: 400px;
-    height: 300px;
-    background-size: 400px 300px;
+
+img {
+    width: 410px;
+    height: 310px;
     display: inline-block;
-    text-decoration: none;
-    padding: 120px;
     text-align: center;
-    margin: 15px;
+    margin: auto;
     border: 5px ridge ghostwhite;
     background-color: ghostwhite;
 }
 
-.one {
-    background-image: url("../images/stroganoff.jpeg");
+.recipe {
+    margin: 15px;
 }
-
-.two {
-    background-image: url("https://live.staticflickr.com/7492/15737968131_4246c51f8b_b.jpg");
-}
-
-.three {
-    background-image: url("https://source.roboflow.com/am3qw3RzG3XESvD4hwIKqwpvMTn2/6FWw2DCwdN1bEsa6B32P/original.jpg");
-}
-
 
 .recipe:hover{
   opacity: 0.5;
