--- a/styles/style.css
+++ b/styles/style.css
@@ -3,9 +3,8 @@
     box-sizing: border-box;
 }
 
-h1{
+h1, .caption{
     font-family: papyrus, Arial, Helvetica, sans-serif;
-    text-align: center;
 }
 
 .header {
@@ -19,7 +18,7 @@ h1{
 }
 
 .main{
-        margin-bottom: 100px;
+    margin-bottom: 100px;
 }
 
 .home-link {
@@ -27,14 +26,18 @@ h1{
     text-decoration: none;
     color: inherit;
 }
-.img-container{
+
+.center, .container, h1{
     text-align: center;
+}
+
+.one, img{
+    display: inline-block;
 }
 
 img {
     width: 410px;
     height: 310px;
-    display: inline-block;
     text-align: center;
     margin: auto;
     border: 5px ridge ghostwhite;
@@ -42,9 +45,15 @@ img {
 }
 
 .recipe {
-    margin: 15px;
+    margin: 40px;
+    margin-bottom: 10px;
 }
 
 .recipe:hover{
   opacity: 0.5;
+}
+
+.caption {
+    font-size: 25px;
+    text-decoration: none;
 }
